--- a/html/proceed_moneyback.html
+++ b/html/proceed_moneyback.html
@@ -112,6 +112,9 @@
 								<a id="nav_a" href="commodity.html">出售中的商品</a>
 							</li>
 							<li>
+								<a id="nav_a" href="sold_out.html">下架的商品</a>
+							</li>
+							<li>
 								<a id="nav_a" href="send_commodity.html">发布商品</a>
 							</li>
 						</ul>
@@ -340,7 +343,7 @@
 		<textarea id="template" style="display:none">
 			{#template MAIN}
 			        <tr>
-						<td>
+						<td style="width:300px;">
 							<!--<img src="{$T.img}" />-->
 							<p style='color: #1E88E5;'>{$T.title}</p>
 							<p>{$T.label}</p>
