--- a/html/logistics.html
+++ b/html/logistics.html
@@ -45,6 +45,9 @@
 								<a id="nav_a" href="commodity.html">出售中的商品</a>
 							</li>
 							<li>
+								<a id="nav_a" href="sold_out.html">下架的商品</a>
+							</li>
+							<li>
 								<a id="nav_a" href="send_commodity.html">发布商品</a>
 							</li>
 						</ul>
