--- a/html/order.html
+++ b/html/order.html
@@ -45,6 +45,9 @@
 							<li>
 								<a id="nav_a" href="send_commodity.html">发布商品</a>
 							</li>
+							<li>
+								<a id="nav_a" href="banner.html">首页 Banner</a>
+							</li>
 						</ul>
 					</li>
 					<li role="presentation">
