--- a/html/datails.html
+++ b/html/datails.html
@@ -70,7 +70,7 @@
 		<div class="container-fluid">
 
 			<div class="col-sm-3 col-md-2 sidebar">
-				<h3>后台管理系统</h3>
+				<h3>保健品后台管理系统</h3>
 				<ul class="nav nav-pills  nav-stacked" id="nav">
 					<li role="presentation" class="active">
 						<a href="order.html">订单管理</a>
@@ -92,6 +92,9 @@
 							</li>
 							<li>
 								<a id="nav_a" href="send_commodity.html">发布商品</a>
+							</li>
+							<li>
+								<a id="nav_a" href="banner.html">首页 Banner</a>
 							</li>
 						</ul>
 					</li>
