--- a/html/edit_commodity.html
+++ b/html/edit_commodity.html
@@ -217,7 +217,7 @@
 		<div class="container-fluid">
 
 			<div class="col-sm-3 col-md-2 sidebar">
-				<h3>后台管理系统</h3>
+				<h3>保健品后台管理系统</h3>
 				<ul class="nav nav-pills  nav-stacked" id="nav">
 					<li role="presentation">
 						<a href="order.html">订单管理</a>
@@ -239,6 +239,9 @@
 							</li>
 							<li>
 								<a id="nav_a" href="send_commodity.html" class="active_a">发布商品</a>
+							</li>
+							<li>
+								<a id="nav_a" href="banner.html" >首页 Banner</a>
 							</li>
 						</ul>
 					</li>
