--- a/html/order.html
+++ b/html/order.html
@@ -130,6 +130,9 @@
 										<span>第</span>
 										<b id="change">1</b>
 										<span>页</span>
+										<span>/</span>
+										<span> 共 <b id="all_change"></b> 页 </span>
+									
 									</div>
 								</div>
 								<!--分页2-->
