--- a/html/send-out.html
+++ b/html/send-out.html
@@ -77,7 +77,7 @@
 		<div class="container-fluid">
 
 			<div class="col-sm-3 col-md-2 sidebar">
-				<h3>保健品后台管理系统</h3>
+				<h3>保健品后台管理</h3>
 				<ul class="nav nav-pills  nav-stacked" id="nav">
 					<li role="presentation" class="active">
 						<a href="order.html">订单管理</a>
@@ -132,7 +132,7 @@
 
 							<!--	<button type="button" class="btn btn-default">使用新地址</button>-->
 							<div class="select">
-								<input type="text" class="form-control address" value="欣欣向荣   18953756262    浙江省  杭州市 下城区 朝晖街道  中山花园209号风荷苑">
+								<input type="text" class="form-control address" value=" 15268551332 鸿安健康管理服务有限公司 浙江省  杭州市 下城区 朝晖街道  中山花园">
 								<p style="color: red;">（注：可以直接修改为其他地址）</p>
 								<!--<input type="radio" name="fruit" value="1" /><span>欣欣向荣   18953756262    浙江省  杭州市 下城区 朝晖街道  中山花园209号风荷苑 </span><br />
 								<input type="radio" name="fruit" value="2" /><span>欣欣向荣   18953756262    浙江省  杭州市 下城区 朝晖街道  中山花园209号风荷苑</span><br />
