--- a/html/moneyback.html
+++ b/html/moneyback.html
@@ -31,7 +31,7 @@
 		<div class="container-fluid">
 
 			<div class="col-sm-3 col-md-2 sidebar">
-				<h3>保健品后台管理系统</h3>
+				<h3>保健品后台管理</h3>
 				<ul class="nav nav-pills  nav-stacked" id="nav">
 					<li role="presentation">
 						<a href="order.html">订单管理</a>
@@ -76,19 +76,6 @@
 
 					<div class="row">
 
-						<!--搜索-->
-						<!--<div class="col-md-12">
-
-							<select class="form-control input-sm sele1">
-								
-								<option>通过订单号搜索</option>
-
-								<option>通过收货人手机号搜索</option>
-							</select>
-							<input type="text" class="form-control wd1" name="wd" placeholder="输入要搜索的值">
-							
-							<button class="btn btn-default searchsub btn1" id="searchOrder" onclick="return false">搜索</button>
-						</div>-->
 
 						<!--表格数据-->
 						<div class="col-md-12">
@@ -156,6 +143,8 @@
 										<span>第</span>
 										<b id="change">1</b>
 										<span>页</span>
+										<span>/</span>
+										<span> 共 <b id="all_change"></b> 页 </span>
 									</div>
 								</div>
 							</div>
