--- a/html/proceed_moneyback.html
+++ b/html/proceed_moneyback.html
@@ -94,7 +94,7 @@
 		<div class="container-fluid">
 
 			<div class="col-sm-3 col-md-2 sidebar">
-				<h3>保健品后台管理系统</h3>
+				<h3>保健品后台管理</h3>
 				<ul class="nav nav-pills  nav-stacked" id="nav">
 					<li role="presentation">
 						<a href="order.html">订单管理</a>
